--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <parent>
     		<groupId>com.idugalic</groupId>
     		<artifactId>my-company-parent</artifactId>
-    		<version>0.0.1-SNAPSHOT</version>
+    		<version>1.0.0</version>
     </parent>
 
 </project>
