--- a/circle.yml
+++ b/circle.yml
@@ -1,10 +1,10 @@
 dependencies:
   override:
-    - mvn -DskipTests clean install dependency:resolve-plugins dependency:go-offline
+    - mvn -s .circleci.settings.xml -DskipTests clean install dependency:resolve-plugins dependency:go-offline
 
 test:
   override:
-    - mvn test
+    - mvn -s .circleci.settings.xml test
   post:
     - mkdir -p $CIRCLE_TEST_REPORTS/junit/
     - find . -type f -regex ".*/target/surefire-reports/.*xml" -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;
